objects/Programs__c.object
<CustomObject>
    <fields>
        <fullName>WKND_DA_Filler__c</fullName>
        <label>WKND DA Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WKND_ON_Filler__c</fullName>
        <label>WKND ON Filler</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Order_Deadline__c</fullName>
        <label>Wednesday&apos;s Logs Close At</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Pending__c</fullName>
        <formula>CASE(
MOD( TODAY ()- DATE(1900, 1, 7), 7),
0, Today ()- 6,
1, Today (),
2, Today ()- 1,
3, Today ()- 2,
4, Today ()- 3,
5, Today ()- 4,
6, Today ()- 5, date(2001,1,1))
+ (Log_Week__c * 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Pending</label>
        <type>Date</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Team__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Clock_Start_Time__c</columns>
        <columns>Logs_CC__c</columns>
        <columns>Logs_Contact__c</columns>
        <columns>Reconciled_Week__c</columns>
        <columns>Deal_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_With_Client_Code</fullName>
        <columns>NAME</columns>
        <columns>ClientCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Team__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Clock_Start_Time__c</columns>
        <columns>Logs_CC__c</columns>
        <columns>Logs_Contact__c</columns>
        <columns>Reconciled_Week__c</columns>
        <columns>Deal_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All With Client Code</label>
    </listViews>
    <listViews>
        <fullName>Cable_Networks</fullName>
        <columns>NAME</columns>
        <columns>Team__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Clock_Start_Time__c</columns>
        <columns>Launch_Week__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cable_Synd__c</field>
            <operation>contains</operation>
            <value>Synd</value>
        </filters>
        <label>Cable Networks</label>
    </listViews>
    <listViews>
        <fullName>Competitive_Set_Networks</fullName>
        <columns>NAME</columns>
        <columns>Competitive_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Competitive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Competitive Set Networks</label>
    </listViews>
    <listViews>
        <fullName>Log_Weeks</fullName>
        <columns>NAME</columns>
        <columns>Week_Pending__c</columns>
        <columns>Log_Week__c</columns>
        <columns>Intg_Day__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Fixed_Inventory__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Barter__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Cable_Synd__c</field>
            <operation>notEqual</operation>
            <value>Cable,PP</value>
        </filters>
        <label>Log Weeks</label>
    </listViews>
    <listViews>
        <fullName>MVMS_OrganizationalChart</fullName>
        <columns>Team__c</columns>
        <columns>NAME</columns>
        <columns>Account_Exec_1__c</columns>
        <columns>Account_Exec_2__c</columns>
        <columns>Lead__c</columns>
        <columns>Assistant__c</columns>
        <columns>SF_Entry__c</columns>
        <columns>Prelog__c</columns>
        <columns>Prelog_Entry_Backup__c</columns>
        <columns>Network_System_Entry_Back_Up__c</columns>
        <columns>Network_System__c</columns>
        <columns>Post_Log__c</columns>
        <columns>Post_Log_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Account_Exec_1__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>MVMS OrganizationalChart</label>
        <sharedTo>
            <group>Management</group>
            <group>Ops_leads</group>
            <group>Pricing_Systems</group>
            <group>System_Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Paid_Programming_Revision_Prep</fullName>
        <columns>NAME</columns>
        <columns>PP_Current_Month_Start__c</columns>
        <columns>PP_Current_Month_End__c</columns>
        <columns>PP_Revision__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cable_Synd__c</field>
            <operation>equals</operation>
            <value>PP</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Paid Programming - Revision Prep</label>
    </listViews>
    <listViews>
        <fullName>Ratings_Compiled_Boxes</fullName>
        <columns>NAME</columns>
        <columns>Reconciled_Week__c</columns>
        <columns>RCreconciled_Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Fire</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>trumpet awards,extra,hearst,plus</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Ratings Compiled Boxes</label>
    </listViews>
    <listViews>
        <fullName>Syndication</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Team__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Clock_Start_Time__c</columns>
        <columns>Logs_CC__c</columns>
        <columns>Logs_Contact__c</columns>
        <columns>Reconciled_Week__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cable_Synd__c</field>
            <operation>equals</operation>
            <value>Syndication</value>
        </filters>
        <label>Syndication</label>
    </listViews>
    <listViews>
        <fullName>Teams</fullName>
        <columns>Team__c</columns>
        <columns>NAME</columns>
        <columns>Conga_Log_Template__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>contains</operation>
            <value>Blue</value>
        </filters>
        <label>Teams</label>
    </listViews>
    <listViews>
        <fullName>Unwired_Networks</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Team__c</columns>
        <columns>Cable_Synd__c</columns>
        <columns>Clock_Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Raycom Bounce,Retro,Tribune</value>
        </filters>
        <label>Unwired Networks</label>
    </listViews>
    <nameField>
        <label>Program</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RC_Reconciled_Week_Cannot_Run_Past_Weeks</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RCreconciled_Week__c   &gt;   Reconciled_Week__c, ISCHANGED(RCreconciled_Week__c))</errorConditionFormula>
        <errorMessage>Cannot run Ratings trigger for weeks before Reconcile.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RC_Week</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(WEEKDAY(RCreconciled_Week__c) = 2)</errorConditionFormula>
        <errorMessage>RCreconciled_week has to be set to a Monday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reconciled_Future_Weeks</fullName>
        <active>true</active>
        <description>Reconciled Week must be set to a previous week. Exception for Syndication</description>
        <errorConditionFormula>if(AND(NOT(ISPICKVAL(Cable_Synd__c, &quot;Syndication&quot;)), Inactive__c &lt;&gt;True), Reconciled_Week__c &gt;= Week_Pending__c ,FALSE)</errorConditionFormula>
        <errorMessage>Reconciled Week must be set to a past week.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reconciled_Week_Date</fullName>
        <active>false</active>
        <description>Unless Inactive, Reconciled Week not equal to less than 30 days</description>
        <errorConditionFormula>if(AND(NOT(ISPICKVAL(Cable_Synd__c, &quot;PP&quot;)), Inactive__c &lt;&gt;True),  Reconciled_Week__c  &lt; TODAY()-30,FALSE)</errorConditionFormula>
        <errorDisplayField>Reconciled_Week__c</errorDisplayField>
        <errorMessage>The reconciled week field must fall within the last 30 days</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reconciled_Week_Date_PP</fullName>
        <active>true</active>
        <description>The reconciled week field for PP must fall within the last 45 days</description>
        <errorConditionFormula>if(and(ISPICKVAL(Cable_Synd__c, &quot;PP&quot;),Inactive__c &lt;&gt;True), Reconciled_Week__c  &lt; TODAY()-45,FALSE)</errorConditionFormula>
        <errorDisplayField>Reconciled_Week__c</errorDisplayField>
        <errorMessage>For paid programming, the reconciled week field must fall within the last 45 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reconciled_Week_Mondays</fullName>
        <active>true</active>
        <description>Reconciled Week must be set to a Monday.</description>
        <errorConditionFormula>MOD(Reconciled_Week__c - DATE(1900, 1, 7), 7)&lt;&gt;1</errorConditionFormula>
        <errorMessage>Reconciled Week must be set to a Monday.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Station_Call_Letter</fullName>
        <active>true</active>
        <description>Required for electronic invoicing</description>
        <errorConditionFormula>AND(ISPICKVAL( Cable_Synd__c ,&quot;Cable&quot;),Station_Call_Letter__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please populate the &apos;Station Call Letter&apos; field. If this is an issue, please follow up with Finance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Permissions</fullName>
        <active>true</active>
        <description>Chang Liu and Margaret Farris, only people allowed to edit</description>
        <errorConditionFormula>IF(ISCHANGED(RCreconciled_Week__c), AND($User.Id &lt;&gt; &quot;005C000000A0V7I&quot;, $User.Id &lt;&gt; &quot;005C000000Ar460&quot;, $User.Id &lt;&gt; &quot;005C000000A0UdX&quot;, $User.Id &lt;&gt; &quot;005C0000009qoiw&quot;) , FALSE)</errorConditionFormula>
        <errorDisplayField>RCreconciled_Week__c</errorDisplayField>
        <errorMessage>Not Allowed to change the Ratings Reconciled Field, Chang Liu and Margaret Farris, only user allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZERO_Lcl_SIXTY</fullName>
        <active>true</active>
        <errorConditionFormula>(0 &gt;  Local_Minutes_Per_Hour__c ) || ( Local_Minutes_Per_Hour__c  &gt; 60)</errorConditionFormula>
        <errorMessage>Local Minutes per Hour can&apos;t be less than 0 or more than 60</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZERO_Natl_SIXTY</fullName>
        <active>true</active>
        <errorConditionFormula>(0  &gt; National_Minutes_Per_Hour__c) ||  (National_Minutes_Per_Hour__c &gt; 60)</errorConditionFormula>
        <errorDisplayField>National_Minutes_Per_Hour__c</errorDisplayField>
        <errorMessage>Number inserted cannot be more than 60 or less than 0</errorMessage>
    </validationRules>
</CustomObject>